Metade do menu finalizado